[package]
name = "simplerouter"
version = "0.1.0"
publish = false
rust-version.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
bytes = "1"
log = "0.4"
pretty_env_logger = "0.5"
thiserror = "1"
tokio = { version = "1", features = ["net", "sync", "rt-multi-thread", "io-util", "macros"] }
