[package]
name = "benchmarks"
version = "0.1.0"
authors = ["tekjar <raviteja@bytebeam.io>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rumq-client = { path = "../" }
tokio = { version = "0.2", features = ["full"]}
pretty_env_logger = "0.4"

[workspace]

[[bin]]
name = "rumqttasync"
path = "rumqttasync.rs"
